--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 
     document.addEventListener("DOMContentLoaded", function () {
         // Инициализация EmailJS
-        emailjs.init("lK76KGFPVwTGiY9vX"); 
+        emailjs.init("j3_jznqK0lyaaXc1e"); 
 
         const materialSelect = document.getElementById("material");
         if (materialSelect) {
