--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
 
 </div>
 
+<script type="text/javascript" src="https://cdn.emailjs.com/sdk/v3/email.min.js"></script>    
 <script>
     const dynamicElementData = {};
 
