--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Опросный лист по техпроцессу</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <!-- Убедитесь, что эта CDN-ссылка является единственной для EmailJS и она актуальна -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <style>
@@ -441,7 +442,6 @@
 
 </div>
 
-<script type="text/javascript" src="https://cdn.emailjs.com/sdk/v3/email.min.js"></script>    
 <script>
     const dynamicElementData = {};
 
@@ -538,7 +538,7 @@
 
     document.addEventListener("DOMContentLoaded", function () {
         // Инициализация EmailJS
-        emailjs.init("j3_jznqK0lyaaXc1e"); 
+        emailjs.init("j3_jznqK0lyaaXc1e");
 
         const materialSelect = document.getElementById("material");
         if (materialSelect) {
@@ -563,7 +563,7 @@
         }
     });
 
-    // --- НОВАЯ ВСПОМОГАТЕЛЬНАЯ ФУНКЦИЯ ДЛЯ КОНВЕРТАЦИИ BLOB В BASE64 ---
+    // --- ВСПОМОГАТЕЛЬНАЯ ФУНКЦИЯ ДЛЯ КОНВЕРТАЦИИ BLOB В BASE64 ---
     async function blobToBase64(blob) {
         return new Promise((resolve, reject) => {
             const reader = new FileReader();
@@ -578,7 +578,7 @@
         });
     }
 
-    // --- НОВАЯ ВСПОМОГАТЕЛЬНАЯ ФУНКЦИЯ: ТОЛЬКО ГЕНЕРИРУЕТ EXCEL BLOB ---
+    // --- ВСПОМОГАТЕЛЬНАЯ ФУНКЦИЯ: ГЕНЕРИРУЕТ EXCEL BLOB ---
     function generateExcelBlob() {
         const form = document.getElementById("form");
         const material = form.material.value;
@@ -626,8 +626,8 @@
         return new Blob([wbout], { type: 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet' });
     }
 
-    // --- ИЗМЕНЕННАЯ ФУНКЦИЯ generatePDFBlob: ТОЛЬКО ГЕНЕРИРУЕТ PDF BLOB ---
-    async function generatePDFBlob() { // Изменено название функции
+    // --- ВСПОМОГАТЕЛЬНАЯ ФУНКЦИЯ: ГЕНЕРИРУЕТ PDF BLOB ---
+    async function generatePDFBlob() {
         const originalContent = document.getElementById("pdf-content");
         const clone = originalContent.cloneNode(true);
 
@@ -769,7 +769,7 @@
             // --- КОНВЕРТИРУЕМ BLOB'Ы В BASE64 ---
             const pdfBase64 = await blobToBase64(pdfBlob);
             const excelBase64 = await blobToBase64(excelBlob);
-            console.log("DEBUG: Public ID перед отправкой:", emailjs.getPublicId());
+
             // Отправка письма через EmailJS с ВЛОЖЕНИЯМИ
             await emailjs.send("service_1rnpxea", "template_sk137ts", {
                 to: `science.techade@gmail.com`, // Email получателя
@@ -781,7 +781,7 @@
                 country: form.country.value,
                 location: form.location.value,
                 material: material,
-                subject: `Новый опросный лист от ${form.company.value} (${form.date.value})`, 
+                subject: `Новый опросный лист от ${form.company.value} (${form.date.value})`,
                 time: new Date().toLocaleString(),
 
             }, {
@@ -847,6 +847,5 @@
 
     window.addElementRow = addElementRow;
 </script>
-
 </body>
 </html>
