--- a/index.html
+++ b/index.html
@@ -771,6 +771,7 @@
             const excelBase64 = await blobToBase64(excelBlob);
 
             // Отправка письма через EmailJS с ВЛОЖЕНИЯМИ
+            // Явно передаем 'publicKey' в опциях. Это может помочь, если init() не сработал.
             await emailjs.send("service_1rnpxea", "template_sk137ts", {
                 to: `science.techade@gmail.com`, // Email получателя
                 email: email, // Email отправителя (из формы)
@@ -797,7 +798,8 @@
                         data: excelBase64,
                         type: "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
                     }
-                ]
+                ],
+                publicKey: "j3_jznqK0lyaaXc1e" // Явно указываем публичный ключ здесь
             });
 
             alert("Опросный лист успешно отправлен!");
