--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Опросный лист по техпроцессу</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Убедитесь, что эта CDN-ссылка является единственной для EmailJS и она актуальна -->
+    <!-- EmailJS SDK остается, но мы его не инициализируем напрямую в коде.
+         Он может быть нужен для других целей или для отладки, но отправка идет через fetch. -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
@@ -537,8 +538,8 @@
     }
 
     document.addEventListener("DOMContentLoaded", function () {
-        // Инициализация EmailJS
-        emailjs.init("j3_jznqK0lyaaXc1e");
+        // Инициализация EmailJS: Удалена, так как мы используем прямой fetch запрос.
+        // emailjs.init("j3_jznqK0lyaaXc1e"); // Эту строку мы убрали
 
         const materialSelect = document.getElementById("material");
         if (materialSelect) {
@@ -591,7 +592,7 @@
         push("Телефон", form.phone.value);
         push("Email", form.email.value);
         push("Страна", form.country.value);
-        push("Местонахождение", form.location.value);
+        push("Отчет от", form.location.value); // Изменено на "Отчет от" для большей ясности
         push("Тип материала", material);
 
         const section = document.getElementById(`section-${material}`);
@@ -770,9 +771,13 @@
             const pdfBase64 = await blobToBase64(pdfBlob);
             const excelBase64 = await blobToBase64(excelBlob);
 
-            // Отправка письма через EmailJS с ВЛОЖЕНИЯМИ
-            // Явно передаем 'publicKey' в опциях. Это может помочь, если init() не сработал.
-            await emailjs.send("service_1rnpxea", "template_sk137ts", {
+            // Публичный ключ EmailJS, который вы используете
+            const emailJsPublicKey = "j3_jznqK0lyaaXc1e"; 
+            const serviceID = "service_1rnpxea";
+            const templateID = "template_sk137ts";
+
+            // Параметры для вашего шаблона EmailJS
+            const templateParams = {
                 to: `science.techade@gmail.com`, // Email получателя
                 email: email, // Email отправителя (из формы)
                 company: form.company.value,
@@ -780,29 +785,47 @@
                 contact_person: form.contact_person.value,
                 phone: form.phone.value,
                 country: form.country.value,
-                location: form.location.value,
+                location: form.location.value, // Теперь будет использоваться "Отчет от" в Excel
                 material: material,
                 subject: `Новый опросный лист от ${form.company.value} (${form.date.value})`,
                 time: new Date().toLocaleString(),
+            };
 
-            }, {
-                // Добавляем вложения через опции EmailJS
-                attachments: [
+            // Тело запроса для EmailJS API
+            const requestBody = {
+                service_id: serviceID,
+                template_id: templateID,
+                user_id: emailJsPublicKey, // Явно указываем user_id (публичный ключ)
+                template_params: templateParams,
+                attachments: [ // Вложения
                     {
-                        name: "Опросный лист.pdf", // Имя файла, которое будет видно получателю
+                        name: "Опросный лист.pdf",
                         data: pdfBase64,
                         type: "application/pdf"
                     },
                     {
-                        name: "Опросный лист.xlsx", // Имя файла, которое будет видно получателю
+                        name: "Опросный лист.xlsx",
                         data: excelBase64,
                         type: "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
                     }
-                ],
-                publicKey: "j3_jznqK0lyaaXc1e" // Явно указываем публичный ключ здесь
+                ]
+            };
+
+            // Отправка запроса напрямую к API EmailJS через fetch
+            const response = await fetch("https://api.emailjs.com/api/v1.0/email/send", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json" // Обязательно указываем тип контента
+                },
+                body: JSON.stringify(requestBody) // Преобразуем объект в JSON строку
             });
 
-            alert("Опросный лист успешно отправлен!");
+            if (response.ok) { // Проверяем, был ли запрос успешным (статус 200-299)
+                alert("Опросный лист успешно отправлен!"); // Лучше использовать модальное окно вместо alert
+            } else {
+                const errorText = await response.text(); // Читаем текстовый ответ для детальной ошибки
+                throw new Error(`Ошибка EmailJS: ${response.status} - ${errorText}`);
+            }
 
         } catch (err) {
             console.error("Ошибка при отправке формы:", err);
@@ -821,6 +844,7 @@
         inputElement.placeholder = "Элемент (напр. Fe)";
         inputElement.name = `${containerId}_element[]`;
         inputElement.className = "form-control";
+        inputElement.value = ""; // Очищаем значение при добавлении новой строки
         inputElement.oninput = () => saveDynamicValues(containerId);
 
         const inputRange = document.createElement("input");
@@ -828,6 +852,7 @@
         inputRange.placeholder = "Диапазон концентрации";
         inputRange.name = `${containerId}_range[]`;
         inputRange.className = "form-control";
+        inputRange.value = ""; // Очищаем значение при добавлении новой строки
         inputRange.oninput = () => saveDynamicValues(containerId);
 
         const removeBtn = document.createElement("button");
