--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
             const excelBase64 = await blobToBase64(excelBlob);
 
             // Публичный ключ EmailJS, который вы используете
-            const emailJsPublicKey = "j3_jznqK0lyaaXc1e"; 
+            const emailJsPublicKey = "2p7l9sK9Zfj6c2SXi"; 
             const serviceID = "service_1rnpxea";
             const templateID = "template_sk137ts";
 
