--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         .element-row input { flex: 1; }
         .element-row button { white-space: nowrap; }
         .analyzer-section, .conditional-block { display: none; margin-top: 20px; padding: 15px; border: 1px solid #ccc; border-radius: 5px; background-color: #f9f9f9; }
+        /* Стили для обязательных полей */
+        .required-field::after {
+            content: " *";
+            color: red;
+        }
         /* Стили для PDF - скрываем элементы управления, которые не нужны в PDF */
         @media print {
             .btn, .form-control[type="file"] {
@@ -54,11 +59,11 @@
             <div class="mb-4">
                 <h5>Основные сведения</h5>
                 <div class="mb-3">
-                    <label for="date" class="form-label">Дата заполнения опросного листа</label>
+                    <label for="date" class="form-label required-field">Дата заполнения опросного листа</label>
                     <input type="date" id="date" name="date" class="form-control" required>
                 </div>
                 <div class="mb-3">
-                    <label for="company" class="form-label">Название компании</label>
+                    <label for="company" class="form-label required-field">Название компании</label>
                     <input type="text" id="company" name="company" class="form-control" required>
                 </div>
                 <div class="mb-3">
@@ -70,8 +75,8 @@
                     <input type="tel" id="phone" name="phone" class="form-control">
                 </div>
                 <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" id="email" name="email" class="form-control">
+                    <label for="email" class="form-label required-field">Email</label>
+                    <input type="email" id="email" name="email" class="form-control" required>
                 </div>
                 <div class="mb-3">
                     <label for="country" class="form-label">Страна</label>
@@ -84,7 +89,7 @@
             </div>
 
             <div class="mb-3">
-                <label for="material" class="form-label">Тип анализируемого материала</label>
+                <label for="material" class="form-label required-field">Тип анализируемого материала</label>
                 <select id="material" name="material" class="form-select" required>
                     <option value="">Выберите...</option>
                     <option value="pulp">Пульпа (1–3 потока для анализа)</option>
@@ -435,6 +440,9 @@
         <div class="mb-3 mt-4">
             <button id="submit-button" type="button" class="btn btn-primary">Отправить</button>
         </div>
+        <div class="mt-3">
+            <small class="text-muted"><span style="color: red;">*</span> - обязательные поля</small>
+        </div>
     </form>
 
     <iframe id="pdf-preview" style="width: 100%; height: 500px; margin-top: 20px; display: none;"></iframe>
@@ -601,7 +609,7 @@
                 if (input.type === "file" || input.tagName === 'BUTTON') return;
 
                 const labelElement = input.closest(".mb-3")?.querySelector("label") || input.closest(".form-check")?.querySelector("label");
-                const label = labelElement ? labelElement.textContent?.trim() : input.name;
+                const label = labelElement ? labelElement.textContent?.trim().replace('*', '') : input.name; // Удаляем звездочку
                 const value = input.type === "checkbox" ? (input.checked ? "Да" : "Нет") : input.value;
                 push(label, value);
             });
@@ -774,19 +782,21 @@
             const templateParams = {
                 to: `science.techade@gmail.com`, // Email получателя
                 email: email, // Email отправителя (из формы)
-                // Отправляем только те параметры, которые точно нужны для минимального теста
-                // После успешной отправки можно будет добавлять остальные
-                company: form.company.value, 
-                date: form.date.value,
+                company: form.company.value || 'Не указано', // Добавлено значение по умолчанию
+                date: form.date.value || 'Не указано',       // Добавлено значение по умолчанию
+                contact_person: form.contact_person.value || 'Не указано', // Добавлено значение по умолчанию
+                phone: form.phone.value ? form.phone.value.replace(/\D/g, '') : 'Не указано', // Очищаем от всех нецифровых символов, добавлено значение по умолчанию
+                country: form.country.value || 'Не указано', // Добавлено значение по умолчанию
+                location: form.location.value || 'Не указано', // Добавлено значение по умолчанию
                 material: material,
                 subject: `Опросный лист от ${form.company.value || 'Неизвестной компании'} (${form.date.value || 'Неизвестной даты'})`,
-                // Телефон без форматирования
-                phone: form.phone.value ? form.phone.value.replace(/\D/g, '') : '', // Очищаем от всех нецифровых символов
-                contact_person: form.contact_person.value || '',
-                country: form.country.value || '',
-                location: form.location.value || '',
                 time: new Date().toLocaleString(),
             };
+
+            // !!! ВРЕМЕННЫЙ ЛОГ для отладки: Проверьте консоль браузера перед отправкой !!!
+            console.log("Отправляемые template_params:", templateParams);
+            // alert("Отправляемые template_params:\n" + JSON.stringify(templateParams, null, 2));
+
 
             // Тело запроса для EmailJS API
             const requestBody = {
